# snake

./: .gitignore  CMakeLists.txt  README.md
include/: app.h  audio.h  defs.h  food.h  renderer.h  snake.h  state.h  text.h  timer.h  window.h
src/: app.cpp  audio.cpp  food.cpp  main.cpp  renderer.cpp  snake.cpp  text.cpp  timer.cpp  window.cpp
